--- a/css/style.css
+++ b/css/style.css
@@ -613,23 +613,23 @@ label {
 
 .w-input:-moz-placeholder,
 .w-select:-moz-placeholder {
-    color: #999
+    color: #fff
 }
 
 .w-input::-moz-placeholder,
 .w-select::-moz-placeholder {
-    color: #999;
+    color: #fff;
     opacity: 1
 }
 
 .w-input:-ms-input-placeholder,
 .w-select:-ms-input-placeholder {
-    color: #999
+    color: #fff
 }
 
 .w-input::-webkit-input-placeholder,
 .w-select::-webkit-input-placeholder {
-    color: #999
+    color: #fff
 }
 
 .w-input:focus,
@@ -2353,7 +2353,7 @@ a {
 }
 
 .nav__logo {
-    width: 66px;
+    width: 90px;
     height: 23px;
     -webkit-box-ordinal-group: 0;
     -webkit-order: -1;
@@ -3826,7 +3826,7 @@ a {
 }
 
 .footer__logo {
-    width: 66px;
+    width: px;
     height: 23px;
     margin-bottom: 20px;
     -webkit-box-ordinal-group: 0;
